implement logging and personal submission detail page for students